gu28: fixing drop-down on small devices

--- a/theme/gu28/less/glasgow.less
+++ b/theme/gu28/less/glasgow.less
@@ -24,11 +24,15 @@ h3 {
 .navbar {
     background-image: none;
     background-color: @brand-primary;
-    height: 80px;
+    min-height: 80px;
 }
 
 .navbar-nav > li > a {
     color: #fff;
+}
+
+.navbar-header {
+    height: 80px;
 }
 
 .navbar-nav > li > a:hover {
